[backend/frontend] End of simulation